Checking Animated checkbox does not do what is documented. #64876

Closed
opened 2019-05-20 13:34:40 +02:00 by alex anguix · 9 comments

System Information
Operating system: MacOS 10.13.6
Graphics card: NVIDIA GeForce GT 750M 2048 MB

Blender Version
Broken: (example: 2.80, edbf15d3c0, master, 2018-11-28, as found on the splash screen)
Worked: (optional)

Short description of error
Checking "animated" on RigidBody reverts transforms to the initial value.

Exact steps for others to reproduce the error

  • Add Rigidbody to an object
  • Allow it to fall and settle on floor

Add 2 Keyframes to Animated checkbox, going from Unchecked to Checked

The rigidbody goes all the way back to its initial transform up high.

Unable to manually set transform based on simulation because the transform values remain at the original values throughout whole simulation.

System Information Operating system: MacOS 10.13.6 Graphics card: NVIDIA GeForce GT 750M 2048 MB Blender Version Broken: (example: 2.80, edbf15d3c044, master, 2018-11-28, as found on the splash screen) Worked: (optional) **Short description of error** Checking "animated" on RigidBody reverts transforms to the initial value. **Exact steps for others to reproduce the error** - Add Rigidbody to an object - Allow it to fall and settle on floor # Add 2 Keyframes to Animated checkbox, going from Unchecked to Checked The rigidbody goes all the way back to its initial transform up high. Unable to manually set transform based on simulation because the transform values remain at the original values throughout whole simulation.
Author

Added subscriber: @alexang

Added subscriber: @alexang

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2019-05-20 14:40:42 +02:00

This should not be animatable at all, it is a key setting of the whole simulation, changing it will reset it completely…

This should not be animatable at all, it is a key setting of the whole simulation, changing it will reset it completely…

This issue was referenced by 49f530c7da

This issue was referenced by 49f530c7da6bd117c4b373307eb646d513538526

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Please do not close this!

This absolutely is intended to be animateable. See the documentation:
https://docs.blender.org/manual/en/latest/physics/rigid_body/tips.html#animation
https://docs.blender.org/manual/es/dev/physics/rigid_body/tips.html#animation

The most common trick is to keyframe animate the location or rotation of an Active physics object as well as the Animated checkbox.When the curve on the Animated property switches to disabled, the physics engine takes over using the object’s last known location, rotation and velocities.

Imagine a scenario where you want to run a simulation and let a group of items fall. Then you want to take over and animate 1 object from it's simulated position/rotation/scale towards the camera. Then placing it back onto the pile, and letting the physics take over. This is a common animation task for motion-graphics style videos.

Please do not close this! This absolutely is intended to be animateable. See the documentation: https://docs.blender.org/manual/en/latest/physics/rigid_body/tips.html#animation https://docs.blender.org/manual/es/dev/physics/rigid_body/tips.html#animation > The most common trick is to keyframe animate the location or rotation of an Active physics object as well as the Animated checkbox.**When the curve on the Animated property switches to disabled, the physics engine takes over using the object’s last known location, rotation and velocities.** Imagine a scenario where you want to run a simulation and let a group of items fall. Then you want to take over and animate 1 object from it's simulated position/rotation/scale towards the camera. Then placing it back onto the pile, and letting the physics take over. This is a common animation task for motion-graphics style videos.

Ah, OK, my mistake… but then what is the issue here? That object goes back to its place when you re-enable the 'animated' setting? that sounds like totally expected to me…

Ah, OK, my mistake… but then what is the issue here? That object goes back to its place when you re-enable the 'animated' setting? that sounds like totally expected to me…

This issue was referenced by 9cc795e1df

This issue was referenced by 9cc795e1df0e04d05eea900829511255d96d6f90
Author

Actually, the documentation mentions what happens going from Animated on to Animated off.

I assumed keyframing the Animated checkbox from Off to On would have the opposite effect. Meaning that it would set the transform to it's last calculated transform from the physics simulation.
But this isn't the case.

Looks like the only solution is to bake the entire physics simulation and then modify all keyframes.

Actually, the documentation mentions what happens going from Animated on to Animated off. I assumed keyframing the Animated checkbox from Off to On would have the opposite effect. Meaning that it would set the transform to it's last calculated transform from the physics simulation. But this isn't the case. Looks like the only solution is to bake the entire physics simulation and then modify all keyframes.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64876
No description provided.