Fix T64876: Checking Animated checkbox does not do what is documented.

This property should not be animatable.